@startuml
hide circle
skinparam groupInheritance 2

class AuthorList {
    + hasAuthor(author: Author): boolean
    + hasAuthor(authorName: String): boolean
    + getAuthor(author: Author): Author
    + getAuthor(authorName: String): Author
}

class ArrayList
ArrayList <|-- AuthorList
note on link : ArrayList<Author>
ArrayList <|--- MangaList
note on link : ArrayList<Manga>

class Author {
    - authorName: String
    + addManga(manga: Manga): void
    + deleteManga(manga: Manga): void
    + getManga(manga: Manga): Manga
}
Author "*" -up-o AuthorList : < comprises of
note bottom of Author : convenience wrappers\nfor MangaList methods

class Manga {
    - mangaName: String
    - deadline: String = "None"
}
Author "0..1 author" <-- Manga : < authored by

class MangaList {
}
Manga "*" -left-o MangaList : < comprises of
MangaList "0..1 mangaList" <-- Author : < has Mangas in

class Sale {
    - quantitySold: int
    - unitPrice: double
    - totalRevenue: double
}
Manga --> "salesData 0..1" Sale

@enduml